change docker for google